# arm_embedded

./: README.md  template-Toolchain-arm.cmake
Projects/: daniels_programmin_toolchain_example.cmake
Projects/F3_GPIO_IOToggle/: CMakeLists.txt  F3_GPIO_IOToggle.kdev4  stm32f4.cmake
Projects/F3_GPIO_IOToggle/.kdev4/: F3_GPIO_IOToggle.kdev4
Projects/demo/: CMakeLists.txt
Projects/demo/.kdev4/: demo.kdev4
Projects/test_bareBone/: CMakeLists.txt  test_bareBone.kdev4
Projects/test_bareBone/.kdev4/: test_bareBone.kdev4
Projects/test_toolchain/: CMakeLists.txt  test_toolchain.kdev4
Projects/test_toolchain/.kdev4/: test_toolchain.kdev4
howto_examples/danielsprogramming.com/: CMakeLists-orig.cmake  Cross compiling STM32F4 in cmake.html
howto_examples/danielsprogramming.com/workspace/: CMakeLists.txt  workspace.kdev4
howto_examples/danielsprogramming.com/workspace/.kdev4/: workspace.kdev4
howto_examples/hertaville.com/: Part 1 – Setting up the GCC ARM Toolchain, OpenOCD and stlink | Hertaville.html  Part 2 – Using a Minimalist Integrated Development Environment From the Command Line | Hertaville.html  changes_by_claus.txt
stm32/: .directory  49-stlinkv2.rules  Toolchain-arm_cortex_m4.cmake  makefile  openocd.cfg
stm32/F3Discovery/: UM1570: STM32F3DISCOVERY Discovery kit for STM32F303xx microcontrollers .dxf
